@@ -14,8 +14,8 @@ my $self = {
 eval {
 	check_language($self, 'key');
 };
-is($EVAL_ERROR, "Language code 'foo' isn't ISO 639-1 code.\n",
-	"Language code 'foo' isn't ISO 639-1 code.");
+is($EVAL_ERROR, "Language code 'foo' isn't code supported by Wikibase.\n",
+	"Language code 'foo' isn't code supported by Wikibase.");
 clean();
 
 # Test.
@@ -25,8 +25,8 @@ $self = {
 eval {
 	check_language($self, 'key');
 };
-is($EVAL_ERROR, "Language code 'xx' isn't ISO 639-1 code.\n",
-	"Language code 'xx' isn't ISO 639-1 code.");
+is($EVAL_ERROR, "Language code 'xx' isn't code supported by Wikibase.\n",
+	"Language code 'xx' isn't code supported by Wikibase.");
 clean();
 
 # Test.
