@@ -1,4 +1,5 @@
 0.37
+ - Error message change: Rename error message for check_language() helper.
  - Remove obsolete error message in doc for check_language() helper.
 
 0.36 2025-01-01T22:02:29+01:00
